--- a/Figure 5C/Accumulation_FHV_Figure_5_C.Rmd
+++ b/Figure 5C/Accumulation_FHV_Figure_5_C.Rmd
@@ -21,21 +21,9 @@ Conduct an ANOVA to see if mean normalised expression of FHV RNA genome is diffe
 # Preparation
 
 ```{r Preparation Loading librarys}
-library(nlme)
-library(moments)
-library(ggplot2)
 library(tidyverse)
-library(gmodels)
-library(FSA)
-library(DescTools)
 library(car)
-library(MASS)
-library(ggpubr)
 library(rstatix)
-library(lmtest)
-library(tidyverse)
-library(car)
-library(ggdensity)
 ```
 
 # Importing Ct data 
@@ -323,6 +311,7 @@ FHV_plot <-ggplot(data_anova) +
   guides(fill = FALSE, colour = FALSE)
 ```
 
+# Exporting output
 ```{r Exporting Output}
 # Exporting model summary
 sink("Accumulation_FHV_Figure_5_C_stats_output_anova.txt") # change file name
