Changing the format of the figures looking at viral RNA accumulation to have Relative ABUNDANCE of viral RNA rather than relative LEVELs of viral RNA.

--- a/Figure 1B/Accumulation_DCV_Figure_1_B_.Rmd
+++ b/Figure 1B/Accumulation_DCV_Figure_1_B_.Rmd
@@ -313,7 +313,7 @@ DCV_plot <-ggplot(data_anova) +
   scale_x_continuous(breaks = unique(data_anova$Time), labels = unique(data_anova$Time)) + # set time axis to correspond to actual time points
   labs(x = "Time (hours)",
        y = expression(bold(
-         "Relative levels of DCV RNA"
+         "Relative abundance of DCV RNA"
        ))) +
   theme(
     plot.margin = unit(c(3, 1, 1, 2), "lines"),
