--- a/Figure 3/Infectivity_DCV_FHV_Figure_3.Rmd
+++ b/Figure 3/Infectivity_DCV_FHV_Figure_3.Rmd
@@ -1,26 +1,23 @@
 ---
-title: "Infectivity_DCV_FHV_Figure_3"
-author: "Angelique Asselin"
+title: "Figure 3: Infectivity of DCV and FHV"
 date: "2023-09-18"
 output: html_document
 ---
 
 
 ## Experiment Description 
-Virus: DCV and FHV 
-This document contains the analysis comparing the infectivity of virus grown in the presence or absence of Wolbachia. 
-Overal to measure the impact of Wolbachia on the infectivity of DCV and FHV. Infectivity was measured as the number of infectious virus /total virus 
+Virus: Progney DCV and FHV (W- and W+)
+This document contains the analysis comparing the infectivity of virus from Drosophila with and without Wolbachia
+Overall to measure the impact of Wolbachia on the infectivity of DCV and FHV. Infectivity was measured as the number of infectious virus /total virus 
 
 
 ## Approach
-
 Steps
- 1. Transformation (log scale) DONE
- 2. Check assumptions DONE
- 3. t-test DONE
- 4. GLM DONE
- 5. Compare outputs DONE 
- 6. Presentation DONE
+ * Transformation (log scale) DONE
+ * t-test DONE
+ * GLM and Assumptions DONE
+ * Compare outputs DONE 
+ * Presentation DONE
  
 # Preparation 
  
@@ -30,14 +27,13 @@ library(ggpubr)
 library(moments)
 library(car)
 library(rstatix)
-
 ```
 
 ## Importing Data 
 sample        = Sample number
 IU_mL         = Measure of concentration of infectious particles (IU/ml)
-treatment     = Whether the progeny virus was grown in flies with or without Wolbachia W- W+ 
-virus         = The type of progeny virus DCV or FHV
+treatment     = Progeny virus from drosophila with (W+) or without (W-) Wolbachia
+virus         = The virus (DCV or FHV)
 biol_rep      = The biological replicate
 total_virus   = Concentration of total virus (Total/ml)
 
@@ -48,34 +44,49 @@ data <- as.data.frame(read_csv("Infectivity_DCV_FHV_Figure_3_data.csv"))
 
 
 ## Transformation 
-Transform the data because it is not normally distributed. Log10.
+Transform (Log10) the data because it is not normally distributed. 
 Transform the total and infectious virus before taking the ratio. 
-Infectivity = log10(IU)/log10Total
- 
+Infectivity = log10(IU)/log10(Total)
+NB 
+While the measures are concentrations if we assume we are looking at the number of virus particles that are infectious in 1 ml then it simplifies
+logIU/ml x 1 ml = logIU
+logtotal/mL x 1ml = logtotal. 
+infectivity = logIU/logtotal 
 
-```{r 1. Transformation}
-
+```{r Transformation}
 # log10 transformation
 data <- data %>% 
-  mutate(log_total_virus = log10(total_virus)) %>% 
-  mutate(log_IU_ml = log10(IU_mL)) %>% 
-  mutate(log_infectivity_ratio = log_IU_ml/log_total_virus) %>% 
-  mutate(infectivity_ratio = IU_mL/total_virus)
-
-data_1 <- data %>%
-  group_by(biol_rep) %>%
-  mutate(average_log_infectivity_ratio = mean(log_infectivity_ratio)) %>% 
-  mutate(average_infectivity_ratio = mean(infectivity_ratio))
+  mutate(log_total_virus = log10(total_virus)) %>% # log10 transform total virus
+  mutate(log_IU_ml = log10(IU_mL)) %>% # log10 transform IU 
+  mutate(log_infectivity_ratio = log_IU_ml/log_total_virus) %>% # calculate log infectivity
+  mutate(infectivity_ratio = IU_mL/total_virus) %>%  # calculate untransformed infectivity
+  mutate(specific_infectivity = total_virus/IU_mL)  # Calculates specific infectivity (number of total to infectious particles)
 
 # Collapsing the dataframe so there is only one point for each biol rep that is the average of two tech reps 
 
+# Averaging the technical replicates
+data_1 <- data %>%
+  group_by(biol_rep) %>%
+  mutate(average_log_infectivity_ratio = mean(log_infectivity_ratio)) %>% 
+  mutate(average_infectivity_ratio = mean(infectivity_ratio)) %>% 
+  mutate(average_specific_infectivity = mean(specific_infectivity)) %>% 
+  select(treatment, 
+         virus, 
+         biol_rep,
+         average_infectivity_ratio, 
+         average_log_infectivity_ratio, 
+         average_specific_infectivity) # selecting only the average data 
+
+# Collapsing so there is only the average for each biol rep 
 c <- seq(from = 1, by =2, length.out = 12)
 data_2 <- data_1[c,]
 
 # Formatting
-data_2 <-data_2 %>%  
-  mutate(average_log_infectivity_ratio = as.double(average_log_infectivity_ratio)) %>% 
-  mutate(treatment = as.factor(treatment)) %>% 
+data_2 <- data_2 %>%
+  mutate(average_log_infectivity_ratio = as.double(average_log_infectivity_ratio)) %>%
+  mutate(average_infectivity_ratio = as.double(average_infectivity_ratio)) %>%
+  mutate(average_specific_infectivity = as.double(average_specific_infectivity)) %>%
+  mutate(treatment = as.factor(treatment)) %>%
   mutate(virus = as.factor(virus))
 
 # Changing the names of the treatments 
@@ -105,146 +116,95 @@ data_FHV_no_Wol <- data_FHV %>%
   
 data_FHV_Wol <- data_FHV %>% 
   subset(treatment == "W+")
+```
 
-# Calculating the infectivity 
+The specific infectivity is essentially the inverse of the measure of infectivity we did 
+specific infectivity = total particles/infectious 
 
-DCV_no_Wol_infect <- (sum(data_DCV_no_Wol$average_infectivity_ratio))/3
-DCV_Wol_infect <- (sum(data_DCV_Wol$average_infectivity_ratio))/3
-FHV_no_Wol_infect <- (sum(data_FHV_no_Wol$average_infectivity_ratio))/3
-FHV_Wol_infect <- (sum(data_FHV_Wol$average_infectivity_ratio))/3
+## Specific Infectivity
 
-# Calculating the number of total particles to 1 infectious particle 
-DCV_no_Wol_number_infect_total <- 1/DCV_no_Wol_infect
-DCV_Wol_number_infect_total <- 1/DCV_Wol_infect
-FHV_no_Wol_number_infect_total <- 1/FHV_no_Wol_infect
-FHV_Wol_number_infect_total <- 1/FHV_Wol_infect
+```{r Calculating the specific infectivity as measured in the literature}
+# Calculating the average spec_infectivity for each group 
+DCV_no_Wol_spec_infect <- mean(data_DCV_no_Wol$average_specific_infectivity)
+DCV_Wol_spec_infect <- mean(data_DCV_Wol$average_specific_infectivity)
+FHV_no_Wol_spec_infect <- mean(data_FHV_no_Wol$average_specific_infectivity)
+FHV_Wol_spec_infect <- mean(data_FHV_Wol$average_specific_infectivity)
+
+av <- mean(data_DCV_no_Wol$average_specific_infectivity)
 
 # Creating a table with these results 
-total_to_IU <- rbind(DCV_no_Wol_number_infect_total,DCV_Wol_number_infect_total,FHV_no_Wol_number_infect_total,FHV_Wol_number_infect_total)
-total_to_IU <- round(total_to_IU, digits = 0)
+total_to_IU <-
+  rbind(
+    DCV_no_Wol_spec_infect,
+    DCV_Wol_spec_infect,
+    FHV_no_Wol_spec_infect,
+    FHV_Wol_spec_infect
+  )
+total_to_IU <- round(total_to_IU, digits = -2)
 
 Virus <-  c("DCV W-", "DCV W+", "FHV W-", "FHV W+")
 
-infect_number <- as.data.frame(total_to_IU) 
-infect_number <- infect_number %>% 
-  rename( "Total Virus to 1 infectious particle" = "V1") %>% 
+spec_infect_number <- as.data.frame(total_to_IU) 
+spec_infect_number <- spec_infect_number %>% 
+  rename( "Total Virus to 1 spec_infectious particle" = "V1") %>% 
   tibble::rownames_to_column( "Delete") %>% 
   cbind(Virus) %>% 
-  select(Virus, "Total Virus to 1 infectious particle", -Delete)
-
+  select(Virus, "Total Virus to 1 spec_infectious particle", -Delete)
 ```
 
-## 2. Assumptions
-This confirms that logtransforming the data was appropriate. 
-Because there are two viruses here I think that they might have a biphasic distribution (therefore check for normality grouping by virus?)
+## T-test
+There is no statistical difference when comparing W- and W+ virus for the same virus. 
 
-Measuring skewness 
-Examples of distributions with  skewness include the following.
-
-skewness = 0: A normal distribution or symmetric distribution 
-skewness = less 1 :A half-normal distribution 
-skewness = 2: An exponential distribution has a 
-skewness = positive: A lognormal distribution 
-
-Results 
-Both viruses considered together 
-Un-transformed skewness = 1.15 
-Transformed skewness = -0.314
-
-DCV
-Un-transformed skewness =  -0.4489619
-Transformed skewness =-0.2971849
-
-FHV
-Un-transformed skewness =  0.6235217
-Transformed skewness = -0.6460759
-
-Conclusions 
-It appears that the entire dataset has a lognormal distribution that is normalised (reduced to close to three and defs below 1 when log10 transformed)
-Continue with the log10 transformation unless otherwise decided. 
-
-```{r 2. Assumptions}
-## Plotting distribution of data ## 
-# Normality of un-transformed data
-ggdensity(data_2, x = "average_infectivity_ratio", fill = "grey")+
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
-
-# Normality of transformed data 
-ggdensity(data_2, x = "average_log_infectivity_ratio", fill = "grey")+
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
-
-# Normality of un-transformed data SORTED BY VIRUS
-ggdensity(data_2, x = "average_infectivity_ratio", fill = "grey", facet.by = "virus")+
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
-
-# Normality of transformed data SORTED BY VIRUS
-ggdensity(data_2, x = "average_log_infectivity_ratio", fill = "grey", facet.by = "virus")+
-  stat_overlay_normal_density(color = "red", linetype = "dashed")
-
-## Formally assess normality ## 
-skewness(data_2$average_infectivity_ratio, na.rm = TRUE) # 1.15 
-skewness(data_2$average_log_infectivity_ratio, na.rm = TRUE) # -0.314
-
-skewness(data_DCV$average_infectivity_ratio, na.rm = TRUE) # -0.44
-skewness(data_DCV$average_log_infectivity_ratio, na.rm = TRUE) # -0.29
-
-skewness(data_FHV$average_infectivity_ratio, na.rm = TRUE) # 0.623
-skewness(data_FHV$average_log_infectivity_ratio, na.rm = TRUE) # -0.646
-```
-## 3. T-test
-
-Results 
-```{r 3. T-test}
+```{r T-test}
 #DCV 
 t_test_DCV <- t.test(data = data_DCV, 
                  average_log_infectivity_ratio ~ treatment)
+t_test_DCV
 
 #FHV 
 t_test_FHV<- t.test(data = data_FHV, 
                  average_log_infectivity_ratio ~ treatment)
+t_test_FHV
 ```
 
-## 4. GLM 
+## GLM 
 
- Results 
- 
- * 3 df with no interaction 
- * 4 df with interaction 
- * no interaction was a better model (AIC smaller)
- * I don't think there is really a difference in the model (deviance ANOVA = 0 )
- * Use the model 2
+Results 
+* model 2 best fit by AIC although not much deviance (no interaction)
+* 
  
  
-```{r 4. GLM }
+```{r GLM }
 ## GLM ## 
 # With interaction 
 model_1 <- glm(formula = average_log_infectivity_ratio ~ treatment * virus,
              family = binomial, 
              data = data_2)
-summary(model_1)
 
 # Without interaction
 model_2 <- glm(formula = average_log_infectivity_ratio ~ treatment + virus,
              family = binomial, 
              data = data_2)
-summary(model_2)
 
 # Best model AIC 
 AIC(model_1, model_2)
+AIC(model_2, model_3)
 
 # Comparing models ANOVA
 anova(model_1, model_2)
 
+# Summary of the model
+summary(model_2)
 ```
 
-# 4. GLM Assumptions
+# GLM Assumptions
 
 1. Homogeneity of variances (PASS)
 2. Normality (PASS)
 3. Outliers (PASS)
 
 
-```{r 4. GLM Assessing Assumptions}
+```{r GLM Assessing Assumptions}
 
 # 1. Homogeneity of variances
 plot(model_2, 1)
@@ -262,12 +222,12 @@ outlierTest(model_2)
 ```
 
 
-# 5. Presenting the results 
+# Presenting the results 
 
-* error bars = SE 
+* error bars = SEM 
 * bar is the mean 
 
-```{r 5. Presenting the results}
+```{r Presenting the results}
 
 summary_data <- data_2 %>%
   group_by(treatment, virus) %>%
@@ -278,53 +238,82 @@ summary_data <- data_2 %>%
 
 # Graphing the data 
 infectivity <-  ggplot(data_2) +
-  geom_jitter(aes(x = interaction(treatment,virus), 
-                  y = average_infectivity_ratio, 
-                  col = treatment), 
-              size = 5, 
-              position = position_jitter(width = 0.1, height = 0.0001), 
-              show.legend = FALSE)  + 
+  geom_jitter(
+    aes(
+      x = interaction(treatment, virus),
+      y = average_infectivity_ratio, # not transformed
+      col = treatment
+    ),
+    size = 5,
+    position = position_jitter(width = 0.1, height = 0.0001),
+    show.legend = FALSE
+  )  +
   scale_color_manual(values = c("black", "red")) +
   scale_shape_manual(values = c(16, 1)) +
   stat_summary(
     data = summary_data,
-    aes(x = interaction(treatment, virus),
-        y = Mean, 
-        group = virus),
+    aes(
+      x = interaction(treatment, virus),
+      y = Mean,
+      group = virus
+    ),
     fun.data = mean_se,
     geom = "crossbar",
-    width = 0.2,  # Adjust the width of the bars
-    col = c("black", "red", "black", "red" )  # Color of the bars
+    width = 0.2,
+    # Adjust the width of the bars
+    col = c("black", "red", "black", "red")  # Color of the bars
   ) +
   # Adjust the appearance of summary bars and error bars
   geom_errorbar(
     data = summary_data,
-    aes(x = interaction(treatment,virus),
-        ymin = Mean - SE, 
-        ymax = Mean + SE, 
-        group = virus),
-    width = 0.1,  # Width of error bars
-    col = c("black", "black", "red", "red" )  # Color of error bars
-  ) + 
+    aes(
+      x = interaction(treatment, virus),
+      ymin = Mean - SE,
+      ymax = Mean + SE,
+      group = virus
+    ),
+    width = 0.1,
+    # Width of error bars
+    col = c("black", "black", "red", "red")  # Color of error bars
+  ) +
   theme_classic() +
-  labs(x = "", 
+  labs(x = "",
        y = expression(bold("Infectivity ratio"))) +  # Use "\n" for line break
-  theme(plot.margin = unit(c(3, 1, 1, 2), "lines"),  # adjust plot margins
-        axis.title = element_text(size = 30, face = "bold", colour = "black"),  # center justify axis title text
-        axis.title.y = element_text(size = 30, face = "bold", colour = "black", hjust = 0.5, vjust = 0.1),  # center text on the Y-axis
-        axis.text = element_text(size = 30, face = "bold", colour = "black"),  # increase size of axis tick labels 
-        plot.title = element_text(size = 30 )) +# increase size of plot title text 
-  coord_cartesian(ylim = c(0, 0.005)) + # sets the maximum y-axis 
+  theme(
+    plot.margin = unit(c(3, 1, 1, 2), "lines"),
+    # adjust plot margins
+    axis.title = element_text(
+      size = 30,
+      face = "bold",
+      colour = "black"
+    ),
+    # center justify axis title text
+    axis.title.y = element_text(
+      size = 30,
+      face = "bold",
+      colour = "black",
+      hjust = 0.5,
+      vjust = 0.1
+    ),
+    # center text on the Y-axis
+    axis.text = element_text(
+      size = 30,
+      face = "bold",
+      colour = "black"
+    ),
+    # increase size of axis tick labels
+    plot.title = element_text(size = 30)
+  ) + # increase size of plot title text
+  coord_cartesian(ylim = c(0, 0.005)) + # sets the maximum y-axis
   scale_x_discrete(labels = c("W-\n DCV", "W+\n DCV", "W-\n FHV", "W+\n FHV")) +
-  scale_y_continuous(breaks = c(0,0.0025, 0.005))
+  scale_y_continuous(breaks = c(0, 0.0025, 0.005))
 
 ```
 
 
 ```{r Export plots run outside of RMD}
-
 # Exporting the specific infectivity summary table
-write.csv(infect_number, file = "Infectivity_DCV_FHV_Figure_3_Output_Specific_Infectivity.txt")
+write.csv(spec_infect_number, file = "Infectivity_DCV_FHV_Figure_3_Output_Specific_Infectivity.csv")
 
 # Exports T-test output 
 # DCV 
@@ -349,14 +338,9 @@ print(summary(model_2)) # prints coxme output to txt file
 sink() # closes the connection **CRITICAL**
 
 # Exporting figure
-today <- Sys.Date()
-date <- format(today, format = "%y%m%d")
-name <- paste(date, "Figure", "3",  sep = "_")
-pdf_name <- paste(name, "pdf", sep = ".")
-ggsave(filename = pdf_name,
+ggsave(filename = "Infectivity_DCV_FHV_Figure_3_output_plot.pdf",
        plot = infectivity, 
        width = 8, 
        height = 4)
-
 ```
 
