--- a/Figure 4B/Survival_Progeny_DCV_Figure_4_B.Rmd
+++ b/Figure 4B/Survival_Progeny_DCV_Figure_4_B.Rmd
@@ -1,11 +1,10 @@
 ---
-title: "Survival Progeny experiment"
-author: "Angelique Asselin"
+title: "Figure 4A: Survival Progeny experiment"
 date: "`r Sys.Date()`"
 output: html_document
 ---
 # Experimental details
- Virus:     Progeny  DCV grown in the absence and presence o r Wolbachia (W- or W+)
+ Virus:     Progeny DCV from flies with(W+) or without wolbachia (W-)
  Titre:     50.6 nL of 10E12 total virus particles/mL 
  Fly:       w1118 wMelPopTet
  Figure:    4B
@@ -17,7 +16,7 @@ To determine if Wolbachia has an impact on the ability for progeny virus(W- or W
 Use the coxme model. 
  
 # Preparation 
-```{r Load librarys, eval=FALSE}
+```{r Load librarys}
 # Load library 
 library(coxme)
 library(survminer)
@@ -47,13 +46,13 @@ head(data_DCV_progeny)
 head(data_DCV_progeny_noPBS)
 head(data_DCV_progeny_PBS)
 
-# Checking factors
+# Checking factors coded correctly 
 levels(data_DCV_progeny$WolVirus)
 levels(data_DCV_progeny$Virus)
 ```
 
 # Coxme Analysis 
-Applying Cox-me model to determine if there is a difference between the surivival of flies infected with  W- virus and W+ DCV
+Applying Cox-me model to determine if there is a difference between the surivival of flies infected with  W- virus when compared with those infected with W+ DCV
 Model is fit with Virus type (WolVirus) as the predictor and biol and tech replication as random effects.
 
 ```{r Coxme fitting}
@@ -69,38 +68,32 @@ Results:
 1. Passed: p-value for global and wolvirus is not significant
 
 Conclusions: 
-As assumptions are meet can just conduct Cox-me and report those results. 
+As assumptions are meet conduct Cox-me and report analysis
 
 
 ```{r Coxme Assumptions}
-# 1. Proportional hazards: Visualise
-# Plot
-LMLplot <- plot(survfit(Surv(Days, Survival) ~ WolVirus, data = data_DCV_progeny_noPBS), fun = "cloglog")
-
 # 1. Proportional hazards: Formally test
 ftest <- cox.zph(fit1)
 print(ftest) # prints test results
 ggcoxzph(ftest) # plots test results
-
-
 ```
 
 # Conclusions 
-From the analysis and the summary
+From the analysis and the summary below
  Wolbachia does NOT impact the pathogenicity of progeny virus
-* The HR of flies with W+ progeny virus is 0.8968857 (coxme) and as the CI crosses 1 there is no difference 
-* For each time point there is no difference in the probability of death between flies infected with W- and W+ progeny virus 
+* The HR of flies infected with W+ virus is 0.8968857 (coxme) and as the CI crosses 1 there is no difference 
+* For each time point there is no difference in the probability of death between flies infected with W- and W+ DCV virus 
 
 # Summary of analysis 
 ```{r Summary Coxme output}
 # Extract the HR estimates and confidence intervals
 coef_cox<- as.data.frame(summary(fit1)$coefficients)
-HR_cox <- as.data.frame(exp(coef_cox))
-CI_cox <- as.data.frame(exp(confint(fit1))) 
+HR_cox <- as.data.frame(exp(coef_cox)) # Calculates hazard ratio (HR)
+CI_cox <- as.data.frame(exp(confint(fit1))) # Calculates confidence interval
 
 # Extracts p-value 
 extract_coxme_table <- function (mod){
-  beta <- mod$coefficients #$fixed is not needed
+  beta <- mod$coefficients 
   nvar <- length(beta)
   nfrail <- nrow(mod$var) - nvar
   se <- sqrt(diag(mod$var)[nfrail + 1:nvar])
@@ -112,7 +105,7 @@ extract_coxme_table <- function (mod){
 extract_coxme_table(fit1)
 p_cox <- as.data.frame(extract_coxme_table(fit1)$p)
 
-# Create data_DCV_progenyframes
+# Creates a data frame with the cofidence intervals etc 
 df_cox <- bind_cols(coef_cox, HR_cox, CI_cox, p_cox) %>% 
   rename(coef = `summary(fit1)$coefficients...1`, 
          HR = `summary(fit1)$coefficients...2`, 
@@ -139,16 +132,15 @@ plot_coxme <- ggplot(df_cox, aes(x = factor, y = HR, colour = test, group_by(tes
   theme_minimal()
 ```
 
-# Graphing Kaplan-Meire survival curves 
+# Graphing Kaplan-Meier survival curves 
 The curves generated are Kaplan-Meier but the analysis that has been conducted is coxme
 
-```{r Creating Kaplan-Meire curves}
+```{r Creating Kaplan-Meier curves}
 # Creating the survival curve 
 curves <- survfit(Surv(Days, Survival) ~ WolVirus, data=data_DCV_progeny_noPBS)
 ```
 
-```{r Plotting Kaplan-Meire curves}
-
+```{r Plotting Kaplan-Meier curves}
 graph_DCV_progeny <- ggsurvplot(curves,
            data = data_DCV_progeny_noPBS,               #change to the virus under analy
            axes.offset = FALSE,            #changes axes to start at zero
@@ -175,24 +167,23 @@ graph_DCV_progeny <- ggsurvplot(curves,
 
 # Exporting outputs 
 ```{r Exporting outputs}
-
 # Saving coxme summary
-write.csv(df_cox, file = "Survival_Progeny_DCV_Figure_4_B_coxme_HR_output.csv", row.names = FALSE)
+write.csv(df_cox, file = "Survival_Progeny_DCV_Figure_4_B_output_coxme_HR.csv", row.names = FALSE)
 
 # Saving coxme fit output 
-sink("Survival_Progeny_DCV_Figure_4_B_coxme_summary_output.txt") # change file name
+sink("Survival_Progeny_DCV_Figure_4_B_output_coxme_summary.txt") # change file name
 summary(fit1) # prints coxme output to txt file UP TO HERE
 sink() # closes the connection **CRITICAL**
 
 
 # Saving coxme plot 
-ggsave("Survival_Progeny_DCV_Figure_4_B_coxme_plot_output.pdf", 
+ggsave("Survival_Progeny_DCV_Figure_4_B_output_coxme_plot.pdf", 
        plot = plot_coxme, 
        height = 7.5, 
        width = 15) 
 
-# Saving Kaplan-Meire survival curves 
-ggsave("Survival_Progeny_DCV_Figure_4_B_curves_plot_output.pdf", 
+# Saving Kaplan-Meier survival curves 
+ggsave("Survival_Progeny_DCV_Figure_4_B_output_curves_plot.pdf", 
        plot = graph_DCV_progeny$plot, 
        height = 7.5, 
        width = 15)
